hphp/test/zend/bad/tests-lang/foreachLoop.007.php
<?php
echo "\nReference to constant array\n";
foreach (array(1,2) as &$v) {
  var_dump($v);
}
?>